--- a/sass/sink.scss
+++ b/sass/sink.scss
@@ -5,8 +5,8 @@
     font-size:  12pt;
     padding:  5px;
     background-color: white;
-    border: 1px solid grey;
-    color:  black;
+    border: 1px solid #bbb;
+    color:  #333;
     margin-left:  10px;
     border-radius: 4px;
     &:hover {
