--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -1,10 +1,10 @@
 <h1>Send Personalised Emails from your own Gmail account!</h1>
-<h3>None of your personal data will be stored</h3>
+<h3>None of your data will be stored</h3>
 <div id="flow-container">
     <ol id="breadcrumb">
-    <li id="email-details-crumb" class="clickable selected" data-enabled="true">Basic Details</li>
-    <li id="enter-attributes-crumb" data-enabled="false">Personalise Your emails</li>
-    <li id="login-details-crumb" data-enabled="false">Enter Login Details</li>
+    <li id="email-details-crumb" class="clickable selected" data-enabled="true">1. Add details</li>
+    <li id="enter-attributes-crumb" data-enabled="false">2. Personalise</li>
+    <li id="login-details-crumb" data-enabled="false">3. Login to your email account</li>
     </ol>
 </div>
 <div id="email-details" class="flow">
