--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,5 +1,6 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>Snail Mail - personalise your emails!</title>
     <meta name=”description” content="Stop sending the same email to different people 100 times. Personalise your emails and send them using your own Gmail Account!">
     <meta property="og:title" content="Snail Mail - personalise your emails!"/>
