--- a/views/send-email-response.hbs
+++ b/views/send-email-response.hbs
@@ -5,3 +5,4 @@
     {{> send_email_status}}
     <p><a href="/">Send another email</a></p>
 </div>
+<script type="text/javascript" src="/send_email_response.js"></script>
