--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -54,3 +54,10 @@
 <div id="login-details" style="display : none;" class="flow"></div>
 
 <div id="send-email-response" class="flow"></div>
+
+<link rel="stylesheet" href="/zepto-tooltip.css" />
+<script type="text/javascript" src="/plugins/happy.js"></script>
+<script src="/bundle.js"></script>
+<script type="text/javascript" src="/plugins/zepto.animate.js"></script>
+<script type="text/javascript" src="/plugins/zepto-tooltip.js"></script>
+<script type="text/javascript" src="/plugins/picoModal-2.1.0.min.js"></script>
