--- a/views/partials/email_preview.hbs
+++ b/views/partials/email_preview.hbs
@@ -1,6 +1,8 @@
+<div id="email-preview-container">
 <div class="label">To</div>
 <div class="data">{{to}}</div>
 <div class="label">Subject</div>
 <div class="data">{{subject}}</div>
 <div class="label">Text</div>
 <div class="data">{{{text}}}</div>
+</div>
