--- a/views/partials/email_attribute_row.hbs
+++ b/views/partials/email_attribute_row.hbs
@@ -3,5 +3,5 @@
         <td><input type="text" name="{{name}}" placeholder="{{name}}" value="{{value}}" /></td>
     {{/each}}
     <td><button class="remove-email-row email-row-button">-</button></td>
-    <td><button class="preview-button email-row-button">Preview</button></td>
+    <td><button class="preview-button email-row-button" data-index="{{@index}}">Preview</button></td>
 </tr>
