Arvind : enabling clustering on prod, using gulp-sass and adding trackjs code

--- a/views/partials/assets.hbs
+++ b/views/partials/assets.hbs
@@ -1,4 +1,8 @@
 <link rel="stylesheet" href="/main.css" />
+<!-- BEGIN TRACKJS -->
+<script type="text/javascript">window._trackJs = { token: '6b03955a8f1748e0b658468e80f954b7' };</script>
+<script type="text/javascript" src="https://d2zah9y47r7bi2.cloudfront.net/releases/current/tracker.js"></script>
+<!-- END TRACKJS -->
 <script type="text/javascript" src="/plugins/zepto.min.js"></script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -9,13 +13,3 @@
     ga('create', 'UA-57163071-1', 'auto');
     ga('send', 'pageview');
 </script>
-<!--<script type="text/javascript">var _key=_key||{};_key["_key"]="c0jxitv5gxgnqqnszhylvj7akmy11mmgc48ch7nf5uf4po1z6sli8lven4y50l";_key["_id"]="6220";(function() {var _st= document.createElement("script");_st.setAttribute("type", "text/javascript");_st.setAttribute("src", "http://www.usersdelight.com/ud.js");document.getElementsByTagName("body")[0].appendChild(_st);})();</script><noscript>Engage using <a href="http://www.usersdelight.com">UseresDelight.com</a> apps</noscript>-->
-<!--{{! hack for the feedback form positioning and heights }}-->
-<!--<style>-->
-    <!--#ud_feed_001{-->
-        <!--top : 20%;-->
-    <!--}-->
-    <!--#ud_feed_001 .f_form {-->
-        <!--min-height : initial;-->
-    <!--}-->
-<!--</style>-->
