--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -32,7 +32,7 @@
             <div id="file-upload-container" rel="tooltip" title="Upload a csv. The first row should have the name of the tags.<br />Put <i>email</i> in the first row of the column with the email addresses">
                 <input type="file" id="email-attributes-file" enctype="multipart/form-data" style="width : 80%;" />
                 <img class="help-icon" src="/images/help.png" />
-                <span id="sampleAttributeFile">Download Sample</span>
+                <span id="sampleAttributeFile">Download sample CSV file</span>
             </div>
         </div>
         <div style="margin-top : 10px;">
