Arvind : fixing view button bind on add/delete email. defect on previous next controls is not fixed yet. on clicking last preview button previous button goes for a toss i think

--- a/views/partials/email_attribute_row.hbs
+++ b/views/partials/email_attribute_row.hbs
@@ -1,7 +1,7 @@
-<tr>
-    {{#each this}}
+<tr class="email-row">
+    {{#each rowData}}
         <td><input type="text" name="{{name}}" placeholder="{{name}}" value="{{value}}" /></td>
     {{/each}}
     <td><button class="remove-email-row email-row-button">-</button></td>
-    <td><button class="preview-button email-row-button" data-index="{{@index}}">Preview</button></td>
+    <td><button class="preview-button email-row-button" data-index="{{rowIndex}}">Preview</button></td>
 </tr>
