--- a/views/partials/email_preview.hbs
+++ b/views/partials/email_preview.hbs
@@ -1,5 +1,5 @@
 <div id="email-preview-header">
-    <div class="preview-header-element link">{{#if showPrevButton}}<div id="prev" class="clickable">Previous</div>{{else}}&nbsp;{{/if}}</div>
+    <div class="preview-header-element link">{{#if showPrevButton}}<div id="previous" class="clickable">Previous</div>{{else}}&nbsp;{{/if}}</div>
     <div class="preview-header-element title"><h2>Preview of your email</h2></div>
     <div class="preview-header-element link">{{#if showNextButton}}<div id="next" class="clickable">Next</div>{{/if}}</div>
 </div>
