Arvind : demo video text, footer added

--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -1,5 +1,5 @@
 <h1>Send Personalised Emails from your own Gmail account!</h1>
-<h3>None of your data will be stored</h3>
+<h3 id="demo-video"><a href="https://www.youtube.com/watch?v=Kkbce__6SG4" target="_blank"><button>&#9658;</button>Watch a demo</a></h3>
 <div id="flow-container">
     <ol id="breadcrumb">
     <li id="email-details-crumb" class="clickable selected" data-enabled="true">1. Add details</li>
@@ -9,8 +9,8 @@
 </div>
 <div id="email-details" class="flow">
     <form id="email-details-form">
-        <p class="personalise-text">Personalise your email by using putting tags (use ${tagName} in the text) where you want to personalise.
-            <img class="small-help-icon" src="/images/help.png" rel="tooltip" title='To write "Hello John" or "Hello Amy" in different emails, put "Hello ${name}" in the text. You can customise each name in the next step' />
+        <p class="personalise-text">Personalise your email by using putting tags (use ${tagName} in the text).<img class="small-help-icon" src="/images/help.png" rel="tooltip" title='To write "Hello John" or "Hello Amy" in different emails, put "Hello ${name}" in the text.' />
+
         </p>
 
         <div class="tooltip-container" rel="tooltip" title="You can personalise the subject too!"><label for="subject">Subject</label><input id="subject" name="subject"/></div><img class="help-icon" src="/images/help.png" rel="tooltip" title="You can personalise the subject too!" />
