--- a/sass/main.scss
+++ b/sass/main.scss
@@ -77,6 +77,24 @@ a:hover {
     color: #888;
   }
 
+  #demo-video {
+    button {
+      padding: 5px;
+      text-align: center;
+      border-radius: 30px;
+      border: none;
+      padding-left: 8px;
+      margin-right : 5px;
+    }
+    a {
+      color : initial;
+      text-decoration: none;
+      &:hover {
+        text-decoration:  underline;
+      }
+    }
+  }
+
   #email-details {
     div.tooltip-container {
       display: inline;
@@ -244,4 +262,11 @@ a:hover {
       cursor: pointer;
     }
   }
+}
+
+#footer {
+  width : 100%;
+  color : #ccc;
+  text-align : center;
+  font-size : 8pt;
 }
