--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -13,5 +13,8 @@
 <div id="container">
     {{{body}}}
 </div>
+<div id="footer">
+  Designed to work on Chrome and Firefox.
+</div>
 </body>
 </html>
