--- a/sass/sink.scss
+++ b/sass/sink.scss
@@ -1,16 +1,18 @@
 .sink {
   border : 1px solid #ccc;
+  padding : 10px 5px;
   border-bottom : none;
-  button {
-    font-size:  12pt;
-    padding:  5px;
+  display : block;
+  margin-top : 5px;
+  span {
+    font-size: 11pt;
+    padding: 5px;
     background-color: white;
-    border: 1px solid #bbb;
-    color:  #333;
-    margin-left:  10px;
+    color: #333;
     border-radius: 4px;
+    cursor : pointer;
     &:hover {
-      background-color : #ccc;
+      color : #2A8EC0;
     }
   }
 }
