changed to open sans font.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,7 @@
 @import 'form_controls';
 
 * {
-  font-family: 'Helvetica', Arial, sans-serif;;
+  font-family: 'Open Sans', Arial, sans-serif;;
 }
 
 .hide {
@@ -113,7 +113,7 @@ a:hover {
         width: 90%;
         display: inline;
       }
-      
+
       #subject {
         width : 100%;
         border-collapse : collapse;
