--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -2,6 +2,9 @@
 <head>
 {{> assets}}
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<style>
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+</style>
 <title>Snail Mail - personalise your emails!</title>
     <meta name=”description” content="Stop sending the same email to different people 100 times. Personalise your emails and send them using your own Gmail Account!">
     <meta property="og:title" content="Snail Mail - personalise your emails!"/>
