including attachment input on frontend.

--- a/views/write_email.hbs
+++ b/views/write_email.hbs
@@ -32,6 +32,10 @@
                 <span id="sampleAttributeFile">Download sample CSV file</span>
             </div>
         </div>
+        <div id="attachment-container">
+          <label for="attachment">Attachment</label>
+          <input type="file" id="attachment" enctype="multipart/form-data"  />
+        </div>
         <div style="margin-top : 10px;">
             <input id="includeSignature" name="include-signature" type="checkbox" />
             <label style="display : initial;" for="includeSignature">Add a link to this website in my email signature.</label><br />
