scrolling to invalid email, trimming the emails before validating

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -67,6 +67,9 @@ a:hover {
     padding: 3px;
   }
 
+  input.invalid-input {
+    border: 1px solid darkred;
+  }
 
   .unhappyMessage {
     color: red;
